--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -7,9 +7,9 @@
         <!--#endif-->
         <!--#if (Net10)-->
         <!--#if (Nightly)-->
-        <MauiVersion>10.0.30-ci.net10.25624.1</MauiVersion>
+        <MauiVersion>10.0.40-ci.main.26065.2</MauiVersion>
         <!--#else-->
-        <MauiVersion>10.0.20</MauiVersion>
+        <MauiVersion>10.0.30</MauiVersion>
         <!--#endif-->
         <!--#elif (Net9)-->
         <MauiVersion>9.0.120</MauiVersion>
@@ -36,8 +36,8 @@
         <PackageVersion Include="Aspire.Hosting.AppHost" Version="$(AspireVersion)" />
         <PackageVersion Include="Aspire.Hosting.Maui" Version="13.1.0-preview.1.25616.3" />
         <PackageVersion Include="Microsoft.Maui.Core" Version="$(MauiVersion)" />
-        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.1.0" />
-        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.1.0" />
+        <PackageVersion Include="Microsoft.Extensions.Http.Resilience" Version="10.2.0" />
+        <PackageVersion Include="Microsoft.Extensions.ServiceDiscovery" Version="10.2.0" />
         <PackageVersion Include="OpenTelemetry.Exporter.OpenTelemetryProtocol" Version="1.14.0" />
         <PackageVersion Include="OpenTelemetry.Extensions.Hosting" Version="1.14.0" />
         <PackageVersion Include="OpenTelemetry.Instrumentation.Http" Version="1.14.0" />
@@ -45,11 +45,11 @@
         <!--#endif-->
         <!--#if (Hybrid && RazorLib)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.11" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="9.0.12" />
         <!--#elif (Net8)-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.22" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="8.0.23" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.1" />
+        <PackageVersion Include="Microsoft.AspNetCore.Components.Web" Version="10.0.2" />
         <!--#endif-->
         <!--#endif-->
         <!--#if (Razor)-->
@@ -80,11 +80,11 @@
         <PackageVersion Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (Net9)-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.11" Condition="'$(Configuration)' == 'Debug'" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="9.0.12" Condition="'$(Configuration)' == 'Debug'" />
         <!--#elif (Net8)-->
         <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="8.0.1" Condition="'$(Configuration)' == 'Debug'" />
         <!--#else-->
-        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.1" Condition="'$(Configuration)' == 'Debug'" />
+        <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.2" Condition="'$(Configuration)' == 'Debug'" />
         <!--#endif-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <!--#if (Net8)-->
